# dmft

./: .gitignore  CMakeLists.txt  main.cpp
dmft/: CMakeLists.txt
dmft-renew/: CMakeLists.txt  main.cpp
dmft-renew.xcodeproj/: project.pbxproj
dmft-renew.xcodeproj/xcuserdata/yinshi.xcuserdatad/xcschemes/: xcschememanagement.plist
dmft-renew/cmake/: FindMPFR.cmake
dmft-renew/dependencies/pugixml/: CMakeLists.txt
dmft-renew/src/: CMakeLists.txt  anal_continuation.hpp  bare_hamiltonian.cpp  bare_hamiltonian.hpp  ct_aux_imp_solver.cpp  ct_aux_imp_solver.hpp  cubic_spline.hpp  gf_data_wrapper.hpp  green_function.cpp  green_function.hpp  input.hpp  self_consistency.cpp  self_consistency.hpp
dmft.xcodeproj/: project.pbxproj
dmft.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
dmft.xcodeproj/xcshareddata/xcschemes/: dmft.xcscheme
dmft.xcodeproj/xcuserdata/yinshi.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
dmft.xcodeproj/xcuserdata/yinshi.xcuserdatad/xcschemes/: xcschememanagement.plist
dmft/cmake/: FindEigen3.cmake  FindGMP.cmake
dmft/dependencies/pugixml/: CMakeLists.txt
dmft/src/: anal_continuation.hpp  bare_hamiltonian.cpp  bare_hamiltonian.hpp  ct_aux_imp_solver.cpp  ct_aux_imp_solver.hpp  cubic_spline.hpp  gf_data_wrapper.hpp  green_function.cpp  green_function.hpp  input.hpp  mqem.hpp  pade.hpp  self_consistency.cpp  self_consistency.hpp
